# openab-control-plane

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.github-controller  HANDOFF.md  LICENSE  README.md  ROADMAP.md  TEMPLATE.md  TODO.md  config.toml.example  zeabur-template-app-1E1Y97.yaml  zeabur-template-pat-Z7TQIR.yaml  zeabur-template.app.yaml  zeabur-template.pat.yaml  zeabur-template.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  council-review.yml  release.yml
crates/controller-protocol/: Cargo.toml  README.md
crates/github-pr-controller/: Cargo.toml
crates/github-pr-controller/docker/: workspace-placeholder.rs
crates/github-pr-controller/src/: config.rs  lib.rs  main.rs  ocp.rs  planner.rs  runtime_events.rs  shadow.rs  store.rs
crates/github-pr-controller/templates/: pr-ask-trigger-pointer.tmpl  pr-review-trigger-pointer.tmpl
crates/github-pr-controller/tests/: boundary.rs
docs/: architecture.md  bot-operations.md  boundary-review-2026-07.md  config-reference.md  controller-action-api.md  coordinators.md  deploy.md  design.md  flow.md  forum-north-client-plan.md  github-app-validation.md  github-controller-canary-runbook.md  github-controller-shadow-runbook.md  github-pr-controller.md  install-github-app-quickstart.md  install-github-app.md  install-pat.md  local-development.md  outcome-priced-review-hypothesis.md  pr-mention-plan.md  provider-neutral-kernel-migration.md  provisioner.md  review-boundaries.md  roadmap.md  route.md  scale-council.md  sdd-quality-workflow-plan.md  sdd-quality-workflow-prior-art.md  stage3-extraction-plan.md  template.md
docs/adr/: 001-three-planes.md  002-github-identity-scope.md  002-steering-delivery.md  003-steering-delivery.md  004-bot-identity-shared-app-pod-local.md  005-cost-governance-roster-swap.md  006-commercial-model-outcome-framed-review.md  006-conversational-followup.md  007-control-plugins-and-oab-father.md  007-oab-father-external-controllers.md  008-external-controller-protocol.md  009-quota-failover-bot-discovery.md  010-openab-configurl-boundary.md  011-conversational-followup.md  012-session-close-webhook.md  013-decision-review-state.md  014-triage-panel.md  015-eval-harness.md  016-gateway-token-externalization.md  017-message-observability-audit-layer.md  018-stage3-extraction.md  019-untrusted-pr-input-boundary.md  020-review-audit-effectiveness-ledger.md  021-review-effectiveness-feedback-loop.md  022-stage-gated-workflow.md  023-bot-agent-liveness.md  024-blue-green-chair.md  025-degraded-council-status-notice.md  027-quota-monitoring-boundary.md  028-settled-result-identity.md  029-bot-health-arbitration.md  030-adversarial-finder-tier.md  031-provider-neutral-kernel.md
examples/: pr-review.yml
scripts/: dev-app-deliveries.sh  dev-build-image.sh  dev-deploy-bots.sh  dev-deploy-k8s.sh  dev-run-host-ocp.sh  dev-sync-gh-app-secret.sh  dev-sync-gh-token-secret.sh  dev-tunnel-k8s.sh  dev-webhook-ready.sh  dev-webhook.sh  exchange-github-app-manifest.sh  get-gh-app-token.sh  github-app-list-installations.sh  github-app-manifest-server.py  github-controller-canary.sh  github-controller-shadow.sh  install-github-app.sh  open-council.sh  open-triage.sh  pr-ask-trigger-pointer.tmpl  pr-review-chair-task.tmpl  pr-review-reviewer-task.tmpl  pr-review-trigger-pointer.tmpl  pr-review-trigger.tmpl  register-github-app.sh  setup-codezebra-app.sh  setup-github-app.sh  triage-trigger.tmpl
skills/: README.md
src/: api.rs  controller.rs  controller_api.rs  controller_events.rs  coordinator.rs  council.rs  github_app.rs  github_webhook.rs  identity.rs  lib.rs  main.rs  ops.rs  orchestrator.rs  output.rs  protocol.rs  routing.rs  session.rs  state.rs  store.rs  ws.rs
tests/: bot_config_freeze.rs  gateway_contract.rs  l3_github_app.rs  pod_config_sync.rs  second_consumer.rs  seed_roster.rs  spike.rs  steering_sync.rs  wire_shapes.rs
(+56 files in other folders)
