[package]
name = "openab-control-plane"
version = "0.1.38"
edition = "2021"
license = "MIT"

[workspace]
members = ["crates/controller-protocol"]
default-members = [".", "crates/controller-protocol"]
resolver = "2"

[dependencies]
controller-protocol = { path = "crates/controller-protocol" }
axum = { version = "0.7", features = ["ws"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
# GitHub App identity (ROADMAP "GitHub App identity" + "Per-role scoped tokens"):
# RS256 App JWT + installation-token exchange. rustls (no OpenSSL C dep) keeps the
# build self-contained; base64 decodes a base64-wrapped private key from env.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
# Webhook signature verification (x-hub-signature-256). sha2 is already a dep.
hmac = "0.12"
rand = "0.8"
subtle = "2"

[dev-dependencies]
tokio-tungstenite = "0.23"
futures-util = "0.3"
